# docling-bedrock-plugin

./: README.md  pyproject.toml
docling_bedrock_plugin/: __init__.py  picture_description_model.py  pipeline_options.py
examples/: README.md  bedrock_image_description.py  image_description.py
